[package]
name = "ronnie-crypto"
version = "0.1.0"
edition = "2021"
license = "MIT"
documentation = "https://docs.rs/ronnie-crypto"
repository = "https://github.com/smallevilbeast/ronnie-crypto"
homepage = "https://github.com/smallevilbeast/ronnie-crypto"
description = """
Wrapped based on OpenSSL, including interfaces for AES, HASH, RSA, HMAC, HKDF, ECDH, etc.
"""
readme = "README.md"
keywords = ["openssl", "crypto", "aes", "hash", "rsa", "hmac", "hkdf", "ecdh"]
categories = ["development-tools"]

[dependencies]
openssl = "0.10.57"
thiserror = "1.0.49"

[dev-dependencies]
hex = "0.4.3"

